--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,13 +1,12 @@
-name: Lint
+name: CI
 on: [push]
 jobs:
-  build:
+  lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - working-directory: ./hoekstraenveldhuis.nl
       - name: Install modules
-        working-directory: /hoekstraenveldhuis.nl
         run: yarn
       - name: Lint using ESLint
-        working-directory: /hoekstraenveldhuis.nl
         run: yarn run eslint .
