--- a/hoekstraenveldhuis.nl/package.json
+++ b/hoekstraenveldhuis.nl/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
-    "eslint-plugin-react": "^7.22.0"
+    "eslint-plugin-react": "^7.22.0",
+    "prop-types": "^15.7.2"
   }
 }
