--- a/hoekstraenveldhuis.nl/package.json
+++ b/hoekstraenveldhuis.nl/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@lottiefiles/react-lottie-player": "^3.0.4",
     "bootstrap": "^5.0.0-beta2",
     "next": "10.0.9",
     "react": "17.0.1",
