--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,37 @@
-# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
-# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# User-specific stuff
-.idea/
+# .idea
+/.idea
 
-# Gradle and Maven with auto-import
-# When using Gradle or Maven with auto-import, you should exclude module files,
-# since they will be recreated, and may cause churn.  Uncomment if using
-# auto-import.
-# .idea/artifacts
-# .idea/compiler.xml
-# .idea/jarRepositories.xml
-# .idea/modules.xml
-.idea/*.iml
-# .idea/modules
-*.iml
-# *.ipr
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# CMake
-cmake-build-*/
+# testing
+/coverage
 
-# File-based project format
-*.iws
+# next.js
+src/.next/
+src/out/
 
-# IntelliJ
-out/
+# production
+src/build
 
-# mpeltonen/sbt-idea plugin
-.idea_modules/
+# misc
+.DS_Store
+*.pem
 
-# JIRA plugin
-atlassian-ide-plugin.xml
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Crashlytics plugin (for Android Studio and IntelliJ)
-com_crashlytics_export_strings.xml
-crashlytics.properties
-crashlytics-build.properties
-fabric.properties
+# local env files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Other IDE files
-jsLibraryMappings.xml
-Project_Default.xml
+# vercel
+.vercel
