--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -6,8 +6,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Install modules
-        working-directory: ./hoekstraenveldhuis.nl
         run: yarn install
       - name: Lint using ESLint
-        working-directory: ./hoekstraenveldhuis.nl
-        run: yarn run eslint .
+        run: yarn lint
