--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@lottiefiles/react-lottie-player": "^3.0.4",
     "bootstrap": "^5.0.0-beta2",
+    "emailjs-com": "^2.6.4",
     "next": "10.0.9",
     "react": "17.0.1",
     "react-dom": "17.0.1"
