--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "emailjs-com": "^2.6.4",
     "next": "10.0.9",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-map-gl": "^6.1.11"
   },
   "devDependencies": {
     "eslint": "^7.22.0",
