--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ NEXT_PUBLIC_EMAILJS_SERVICE_ID=""
 NEXT_PUBLIC_EMAILJS_TEMPLATE_ID=""
 NEXT_PUBLIC_EMAILJS_USER_ID=""
 
-MAPBOX_API_KEY=""
+NEXT_PUBLIC_MAPBOX_API_KEY=""
