--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "bootstrap": "^5.0.0-beta2",
     "emailjs-com": "^2.6.4",
     "next": "10.0.9",
+    "nodemailer": "^6.5.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-hook-form": "^7.0.2",
     "react-map-gl": "^6.1.11"
   },
   "devDependencies": {
