--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
-NEXT_PUBLIC_EMAILJS_SERVICE_ID=""
-NEXT_PUBLIC_EMAILJS_TEMPLATE_ID=""
-NEXT_PUBLIC_EMAILJS_USER_ID=""
+# SMTP settings for contact form
+SMTP_SERVER=
+SMTP_PORT=
+SMTP_USER=
+SMTP_PASSWORD=
 
-NEXT_PUBLIC_MAPBOX_API_KEY=""
+# Mapbox settings
+NEXT_PUBLIC_MAPBOX_API_KEY=
