--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@lottiefiles/react-lottie-player": "^3.0.4",
+    "axios": "^0.21.1",
     "bootstrap": "^5.0.0-beta2",
     "emailjs-com": "^2.6.4",
     "next": "10.0.9",
