Started work on implementing a working navigation bar component

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "10.0.9",
     "nodemailer": "^6.5.0",
     "react": "17.0.1",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "17.0.1",
     "react-hook-form": "^7.0.2",
     "react-map-gl": "^6.1.11",
